<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_calendar" /> <!-- Consider a unique calendar icon -->

    <item
        android:id="@+id/navigation_todo"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/title_todo" /> <!-- Placeholder, replace with actual icon -->

    <item
        android:id="@+id/navigation_gantt"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_gantt" /> <!-- Consider a unique gantt icon -->

    <item
        android:id="@+id/navigation_ai_planner"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_ai_planner" /> <!-- Consider a unique planner icon -->

    <item
        android:id="@+id/navigation_ai_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_ai_settings" />

</menu>